# logic-gate-simulator

./: .gitignore  CMakeLists.txt  CMakeSettings.json
resources/shaders/: lighting.glslf  lighting.glslv  rlights.h
src/: main.cpp
src/logic/: logic_gate.cpp  logic_gate.hpp  logic_gate_io.cpp  logic_pipe.cpp  logic_pipe.hpp
src/math/: matrix_a.cpp  matrix_a.hpp  rand.cpp
src/rendering/: renderer.cpp  renderer.hpp
src/rendering/objects/: instanced_mesh_factory.cpp  instanced_mesh_factory.hpp  mesh_data.cpp  mesh_data.hpp  mesh_group.cpp  mesh_group.hpp  objects.cpp  objects.hpp
src/rendering/objects/meshes/: mesh_custom.cpp  mesh_custom.hpp
src/rendering/objects/volumes/: arrow.cpp  arrow.hpp  rect.cpp  text.cpp  text.hpp
src/resource_manager/: resource_manager.cpp  resource_manager.hpp
src/simulation/: ticker.cpp  ticker.hpp
src/storage/: object_storage.cpp  object_storage.hpp
